fixed some position on the survey table listing so that it won't shift upwards when new surveys are added

--- a/app/assets/stylesheets/surveys.scss
+++ b/app/assets/stylesheets/surveys.scss
@@ -284,9 +284,9 @@ i {
 
 .survey-listing-table {
   position: absolute;
-  top: 50%;
+  top: 15rem;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
 }
 
   .survey-listing-table th {
